--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,12 @@
       <version>4.12</version>
       <scope>test</scope>
     </dependency>
+
+    <dependency>
+      <groupId>com.intellij</groupId>
+      <artifactId>annotations</artifactId>
+      <version>12.0</version>
+    </dependency>
   </dependencies>
 
   <build>
