--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,13 @@
       <artifactId>annotations</artifactId>
       <version>12.0</version>
     </dependency>
+
+    <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+      <version>25.0-jre</version>
+    </dependency>
+
   </dependencies>
 
   <build>
